samples/_failures_safe/1761495388_6e6133_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78817edd.c: In function ‘graph_dijkstra’:
./samples/SAFE/__tmp_78817edd.c:155:17: error: expected expression at end of input
  155 |                 if (!visited[to_id] && dist[min_index] !=
      |                 ^~
./samples/SAFE/__tmp_78817edd.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78817edd.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78817edd.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78817edd.c:155:17: error: expected declaration or statement at end of input
